--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,8 @@ body {
     width: 40%;
     padding: 0 0 0 15px;
     height: 100vh;
-      }
+    overflow-y: hidden;
+    overflow-x: hidden;
+  }
 
 }
