--- a/css/basicGallery.css
+++ b/css/basicGallery.css
@@ -19,22 +19,54 @@
 .nav {
   width: 100vh;
   display: block;
-  height: 7vh;
-  margin: 0 auto;
+  height: 11vh;
+  margin: 20px auto;
   min-height: 60px;
   width: 95%;
   background-color: black;
 }
 
-.gallery {
+.wrapper {
   width: 85%;
   margin: 0 auto;
+  overflow: auto;
 }
 
-.galleryItem {
-  margin-top: 20px;
+
+img {
+  max-width: 100vh;
+  padding-top: 3vh;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+@media only screen and (min-width: 1024px) {
+body {
+  background-color: cyan;
 }
 
 img {
-  max-width: 100%;
+float: left;
+/*width: 33vh;*/
+/*margin: 1vh;*/
+display: block;
+padding-top: 0px;
+text-align:center;
+width: 49%;
+margin: 4.25px;
+}
+
+.wrapper {
+  width: 90%;
+  margin: 0 auto;
+  overflow: auto;
+}
+
+
+
+
+
+
 }
