--- a/css/featuredItems.css
+++ b/css/featuredItems.css
@@ -15,6 +15,10 @@
             box-sizing: border-box;
 }
 
+h3 {
+  width: 45%;
+}
+
 ul {
   padding-left: 0px;
   margin-bottom: 50px;
@@ -45,6 +49,39 @@ img {
 
 .featured {
   margin-bottom: 45px;
+}
+
+.mainContent {
+  width: 100%;
+  overflow: auto;
+}
+
+
+@media only screen and (min-width: 652px) {
+
+  .logo {
+    float: left;
+  }
+
+  ul {
+    float: right;
+  }
+
+  .headerText {
+    margin-left: 5%;
+    overflow: auto;
+    clear: both;
+  }
+
+  .featured {
+    float: left;
+    width: 45%;
+    margin: 1vh;
+  }
+
+  .mainContent {
+    padding-left: 2.5%;
+  }
 }
 
 
