--- a/css/column-flip.css
+++ b/css/column-flip.css
@@ -18,6 +18,8 @@
 .container {
   width: 95%;
   margin: 0 auto;
+  border: 1px solid red;
+  overflow: auto;
 }
 
 .logo {
@@ -43,9 +45,9 @@ ul {
 
 li {
   float: left;
-  padding: 1vh 1.7vh;
+  padding: 1vh 1.6vh;
   background-color: #D3D3D3;
-  margin-right: 6px;
+  margin-right: 4px;
 }
 
 .logoBig {
@@ -80,7 +82,8 @@ h3 {
 
 .smallText {
   float: left;
-  max-width: 80%;
+  max-width: 87%;
+  padding-left: 10px;
 }
 
 @media only screen and (min-width: 1024px) {
@@ -139,18 +142,44 @@ h3 {
 
 @media only screen and (min-width: 1396px) {
 
+  .mainContent {
+    max-width: 95%;
+  }
 
+  .mainText {
+    margin-left: 3%;
+  }
 
+  .imgColumn {
+    float: left;
+    width: 31%;
+    margin: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 
+  .subImg {
+    max-width: 100%;
+  }
 
+  .textColumn {
+    float: left;
+    width: 31%;
+    margin: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 
+  .textColumn p {
+    float: left;
+    max-width: 100%;
+  }
 
-
-
-
-
-
-
-
-
+  .imgTextColumn {
+    float: left;
+    width: 31%;
+    margin: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
