--- a/css/featureShuffle.css
+++ b/css/featureShuffle.css
@@ -1,9 +1,9 @@
 /*For testing only */
 
-*:not(body):not(html) {
+/**:not(body):not(html) {
  box-sizing:border-box;
  border:1px dashed #000;
-}
+}*/
 
 /* End for testing */
 
@@ -39,7 +39,7 @@ img {
   display: none;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 860px) {
 
   img {
     display:inline;
@@ -57,7 +57,7 @@ img {
 
   .imageLeft div {
     float: right;
-    max-width: 70%;
+    max-width: 80%;
   }
 
   .imageRight img {
@@ -66,7 +66,7 @@ img {
 
   .imageRight div {
     float: left;
-    max-width: 70%;
+    max-width: 80%;
  }
 }
 
